[tool.poetry]
name = "censys"
version = "2.1.6"
description = "An easy-to-use and lightweight API wrapper for Censys APIs (censys.io)."
authors = ["Censys, Inc. <support@censys.io>"]
license = "Apache-2.0"
readme = "README.md"
include = ["README.md", "LICENSE", "censys/py.typed"]
keywords = ["censys", "api", "search", "attack surface management"]
classifiers = [
    "Typing :: Typed",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Environment :: Console",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.urls]
"Censys Homepage" = "https://censys.io/"
"Censys Search" = "https://search.censys.io/"
"Discussions" = "https://github.com/censys/censys-python/discussions"
"Documentation" = "https://censys-python.rtfd.io"
"Changelog" = "https://github.com/censys/censys-python/releases"
"Tracker" = "https://github.com/censys/censys-python/issues"
"Source" = "https://github.com/censys/censys-python"

[tool.poetry.scripts]
censys = "censys.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
requests = ">=2.26.0"
backoff = "^2.0.1"
rich = ">=10.16.2"
importlib-metadata = { version = "*", python = "<3.8" }

[tool.poetry.dev-dependencies]
# Lint
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
flake8-pytest-style = "^1.6.0"
flake8-simplify = "^0.19.2"
flake8-comprehensions = "^3.10.0"
flake8-isort = "^4.1.1"
isort = "^5.10.1"
pep8-naming = "^0.13.0"
flake8-black = "^0.3.3"
black = "^22.3.0"
blacken-docs = "^1.12.1"
darglint = "^1.8.1"
pyupgrade = "^2.34.0"
# Tests
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
responses = "^0.21.0"
parameterized = "^0.8.1"
# Types
mypy = "^0.961"
types-requests = ">=2.26.0"

[tool.black]
target-version = ["py37"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
known_first_party = ["censys"]
known_local_folder = ["censys"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
extend_skip = ["setup.py", "conf.py"]

[tool.mypy]
python_version = "3.7"
files = ["censys"]
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["parameterized", "importlib_metadata"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
