[tool.poetry]
name = "censys"
version = "2.2.14"
description = "An easy-to-use and lightweight API wrapper for Censys APIs (censys.io)."
authors = ["Censys, Inc. <support@censys.io>"]
license = "Apache-2.0"
readme = "README.md"
include = ["censys/py.typed"]
keywords = ["censys", "api", "search", "attack surface management"]
classifiers = [
    "Typing :: Typed",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Environment :: Console",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.urls]
"Censys Homepage" = "https://censys.io/"
"Censys Search" = "https://search.censys.io/"
"Discussions" = "https://github.com/censys/censys-python/discussions"
"Documentation" = "https://censys-python.rtfd.io"
"Changelog" = "https://github.com/censys/censys-python/releases"
"Tracker" = "https://github.com/censys/censys-python/issues"
"Source" = "https://github.com/censys/censys-python"

[tool.poetry.scripts]
censys = "censys.cli:main"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = ">=2.29.0"
urllib3 = "<3.0.0"
backoff = ">=2.0.0,<3.0.0"
rich = ">=10.16.2"
argcomplete = ">=2.0.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
# Lint
black = "^23.3.0"
blacken-docs = "^1.13.0"
darglint = "^1.8.1"
flake8 = "^5.0.4"
flake8-black = "^0.3.6"
flake8-comprehensions = "^3.12.0"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.0.0"
flake8-pytest-style = "^1.7.2"
flake8-simplify = ">=0.20,<0.22"
isort = "^5.11.5"
pep8-naming = "^0.13.3"
pyupgrade = "^3.3.1"
# Tests
pytest = ">=7.3,<9.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
responses = ">=0.23.1,<0.25.0"
parameterized = "^0.9.0"
# Types
mypy = "^1.5.1"
types-requests = "^2.29.0.0"

[tool.black]
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
known_first_party = ["censys"]
known_local_folder = ["censys"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
extend_skip = ["setup.py", "conf.py"]

[tool.mypy]
python_version = "3.8"
files = ["censys"]
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["parameterized", "rich", "attr"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
